--- a/views/user/_filterBar.ejs
+++ b/views/user/_filterBar.ejs
@@ -7,15 +7,15 @@
     </div>
 
     <div class="sorting mr-auto">
-        <form action="">
+        <form id="myForm" action="">
             
-            <select id="sort" name="sort">
+            <select id="sort" onchange="submitForm()" name="sort">
               <option value="">None</option>
               <option value="price_asc" <%= sort === 'price_asc' ? 'selected' : '' %>>Price (Low to High)</option>
               <option value="price_desc" <%= sort === 'price_desc' ? 'selected' : '' %>>Price (High to Low)</option>
             </select>
-            </select>
-            <button  class="btn ml-1"  type="submit">Sort</button>
+            
+           
         </form>
     </div>
     <div class="pagination">
