--- a/views/user/_headerNavBar.ejs
+++ b/views/user/_headerNavBar.ejs
@@ -40,7 +40,7 @@
                              aria-expanded="false"><% if (user) { %>
                                 <%= user.name %>
                                 <% } else { %>
-                                <a class="nav-link dropdown-toggle" href="/login"> Hello Guest</a>
+                                <a class="nav-link dropdown-toggle" href="/login"> login</a>
                              <% } %></a>
                             <ul class="dropdown-menu">
                                 <% if (user) { %>
