delete controller and loading page

--- a/views/user/_headerNavBar.ejs
+++ b/views/user/_headerNavBar.ejs
@@ -14,7 +14,8 @@
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item submenu dropdown">
+                        <li class="nav-item"><a class="nav-link" href="/all-product">Sneakers</a></li>
+                        <!-- <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                              aria-expanded="false">Sneakers</a>
                             <ul class="dropdown-menu">
@@ -24,7 +25,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/nike">Nike</a></li>
                                
                             </ul>
-                        </li>
+                        </li> -->
                         <!-- <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                              aria-expanded="false">Apparel</a>
