--- a/views/user/adidas.ejs
+++ b/views/user/adidas.ejs
@@ -65,7 +65,7 @@
                                         <img class="img-fluid" src=<%= array.image[0] %> alt="">
                                         <div class="product-details">
                                             <h5><%= array.brand.name %></h5>
-                                            <a href="/product-detail?id=<%= array._id%>"><h6><%= array.description %></h6></a>
+                                            <a href="/product-detail?id=<%= array._id%>"><h6><%= array.name %></h6></a>
                                             <div class="price">
                                                 <h6><i class="fa fa-inr" aria-hidden="true"></i> <%= array.price %></h6>
                                             </div>
