--- a/views/user/loadingPage.ejs
+++ b/views/user/loadingPage.ejs
@@ -79,8 +79,8 @@
 				<div class="col-lg-6 no-padding exclusive-right">
 					<div class="active-exclusive-product-slider">
 						<!-- single exclusive carousel -->
-						<% if (adidas) { %>
-							<% adidas.forEach(element => { %>
+						<% if (allProduct) { %>
+							<% allProduct.forEach(element => { %>
 						<div class="single-exclusive-slider">
 							<img class="img-fluid" src="<%= element.image[0] %>" alt="">
 							<div class="product-details">
