checkout page name problem and admin side menu add coupon

--- a/views/admin/_sideBar.ejs
+++ b/views/admin/_sideBar.ejs
@@ -24,6 +24,9 @@
               <li class="<% activeLink === 'add-product' ? 'nav-link dropdown-toggle active' : '' %>">
                 <a href="/add-product" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Add Products</a>
               </li>
+              <li class="<% activeLink === 'add-coupon' ? 'nav-link dropdown-toggle active' : '' %>">
+                <a href="/add-coupon" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Add Coupon</a>
+              </li>
               <li class="<% activeLink === 'add-category' ? 'nav-link dropdown-toggle active' : '' %>">
                 <a href="/add-category" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Add Category</a>
               </li>
