--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -33,22 +33,22 @@
                 <h3>Save Address Details</h3>
                 <form class="row contact_form" action="/address" method="post" novalidate="novalidate">
                     <div class="col-md-6 form-group p_star">
-                        <input type="text" class="form-control" id="first" name="firstName"  onblur="this.placeholder = 'First Name*'">
-                        <label for="firstName">First Name</label>
+                        <input type="text" class="form-control" id="first" name="firstName"  placeholder = 'First Name*'">
+                       
                     </div>
                     <div class="col-md-6 form-group p_star">
-                        <input type="text" class="form-control" id="last" name="lastName"  onblur="this.placeholder = 'Last Name*'">
+                        <input type="text" class="form-control" id="last" name="lastName"  placeholder = 'Last Name*'">
                         
                     </div>
                     <div class="col-md-12 form-group">
-                        <input type="text" class="form-control" id="company" name="companyName" onblur="this.placeholder = 'Company Name*'">
+                        <input type="text" class="form-control" id="company" name="companyName" placeholder = 'Company Name'>
                     </div>
                     <div class="col-md-6 form-group p_star">
-                        <input type="text" class="form-control" id="number" name="phone" onblur="this.placeholder = 'Phone*'">
+                        <input type="text" class="form-control" id="number" name="phone" placeholder = 'Phone*'">
                         
                     </div>
                     <div class="col-md-6 form-group p_star">
-                        <input type="text" class="form-control" id="email" name="email" onblur="this.placeholder = 'Email Id *'">
+                        <input type="text" class="form-control" id="email" name="email" placeholder = 'Email Id *'">
                         
                     </div>
                     <div class="col-md-12 form-group p_star">
@@ -58,15 +58,15 @@
                         </select>
                     </div>
                     <div class="col-md-12 form-group p_star">
-                        <input type="text" class="form-control" id="add1" name="addressLine1" onblur="this.placeholder = 'Address First Line*'">
+                        <input type="text" class="form-control" id="add1" name="addressLine1" placeholder = 'Address First Line*'">
                         
                     </div>
                     <div class="col-md-12 form-group p_star">
-                        <input type="text" class="form-control" id="add2" name="addressLine2" onblur="this.placeholder = 'Address Second Line*'">
+                        <input type="text" class="form-control" id="add2" name="addressLine2" placeholder = 'Address Second Line*'">
                         
                     </div>
                     <div class="col-md-12 form-group p_star">
-                        <input type="text" class="form-control" id="city" name="city" onblur="this.placeholder = 'City*'">
+                        <input type="text" class="form-control" id="city" name="city" placeholder = 'City*'">
                         
                     </div>
                     <div class="col-md-12 form-group p_star">
@@ -83,7 +83,7 @@
                         </select>
                     </div>
                     <div class="col-md-12 form-group">
-                        <input type="text" class="form-control" id="zip" name="postcode" onblur="this.placeholder = 'Postcode*'">
+                        <input type="text" class="form-control" id="zip" name="postcode" placeholder = 'Postcode*'">
                     </div>
                     <div class="col-md-12 form-group mt-3">
                         <button type="submit" value="submit" class="primary-btn">Save</button>
